# dumb_smart_home

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
dumb_smart_home/: ac_handler.py  auth.py  main.py
dumb_smart_home/static/: control.js
dumb_smart_home/templates/: base.html  control.html  login.html
